# switchboard-oracle-poc

./: .env-example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  Dockerfile.rust  Dockerfile.ts  Makefile  README.md  measurement.txt  package.json
function/: Cargo.toml  Dockerfile  package.json  tsconfig.json
function-ts/: package-lock.json  package.json
function-ts/scripts/: functionDeploy.ts
function-ts/src/: idl.json  index.ts  types.ts
function-ts/src/sdk/accounts/: index.ts
function-ts/src/sdk/instructions/: index.ts  updateOracle.ts
function/src/: idl.json  index.ts  main.rs  oracles.rs  prices.rs
function/src/sdk/: programId.ts
function/src/sdk/accounts/: OracleData.ts
function/src/sdk/instructions/: initialize.ts  saveData.ts
programs/fat-oracle/: Cargo.toml
programs/fat-oracle/src/: lib.rs  state.rs
programs/fat-oracle/src/ixs/: initialize.rs  mod.rs  update_oracle.rs
programs/oracle-poc/: Cargo.toml
programs/oracle-poc/src/: lib.rs
programs/oracle-poc/src/instructions/: add_oracle.rs  initialize.rs  mod.rs  set_function.rs  set_oracle_quote_size.rs  update_oracle.rs
programs/oracle-poc/src/state/: mod.rs  oracle_container.rs  oracle_data.rs
scripts/: addOracle.ts  debug.ts  functionDeploy.ts  initialize.ts  utils.ts
tests/: fat-oracle.ts  oracle-poc.ts
