[workspace]

[package]
name = "function"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "function"
path = "src/main.rs"

[dependencies]
fat-oracle = { path = "../programs/fat-oracle", features = ["no-entrypoint"] }
tokio = "^1"
futures = "0.3"
serde = "^1"
serde_json = "^1"
switchboard-solana = { version = "0.28.32", features = [] }
anyhow = "1.0.75"