[workspace]

[package]
name = "function"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "function"
path = "src/main.rs"

[dependencies]
oracle-poc = { path = "../programs/oracle-poc", features = ["no-entrypoint"] }
tokio = "^1"
serde = "^1"
serde_json = "^1"
switchboard-solana = { version = "0.28.32", features = [] }
anyhow = "1.0.75"
switchboard-utils = "0.8.5"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.8.0"
solana-sdk = "~1.16.7"
solana-client = "~1.16.7"
solana-account-decoder = "~1.16.7"
